--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,27 @@
-<div class="padding">
-    <sw-openlayers-map></sw-openlayers-map>
+<div fxLayout="column" style="width: 100%; height: 100%; overflow: hidden;">
+    <mat-toolbar color="primary" fxFlex="0 0 auto">
+        <button mat-button routerLink="/">
+            <h1>Weather</h1>
+        </button>
+
+        <!-- This fills the remaining space of the current row -->
+        <span class="fill-remaining-space"></span>
+        <div fxLayout="row" fxShow="false" fxShow.gt-sm>
+            <button mat-button routerLink="/overview">Overview</button>
+            <button mat-button routerLink="/stations">Stations</button>
+            <button mat-button routerLink="/about">About</button>
+        </div>
+        <button mat-button [mat-menu-trigger-for]="menu" fxHide="false" fxHide.gt-sm>
+            <mat-icon>menu</mat-icon>
+        </button>
+
+        <mat-menu x-position="before" #menu="matMenu">
+            <button mat-menu-item routerLink="/overview">Overview</button>
+            <button mat-menu-item routerLink="/stations">Stations</button>
+            <button mat-menu-item routerLink="/about">About</button>
+        </mat-menu>
+    </mat-toolbar>
+    <div fxFlex="1 1 100%">
+        <router-outlet></router-outlet>
+    </div>
 </div>
