Added weather overview

--- a/src/app/measurement-line/measurement-line.component.html
+++ b/src/app/measurement-line/measurement-line.component.html
@@ -1,4 +1,4 @@
-<div style="display: block; width: 70vw; padding-top: 1em;" *ngIf="values !== null">
+<div style="display: block; width: 100%; padding-top: 1em;" *ngIf="values !== null">
   <canvas baseChart
     [datasets]="lineChartData"
     [options]="lineChartOptions"
