--- a/src/app/station-summary/station-summary.component.scss
+++ b/src/app/station-summary/station-summary.component.scss
@@ -18,3 +18,9 @@ tr.mat-row:hover {
     background: #f0f0f0;
     cursor: pointer;
 }
+
+sw-measurement-line {
+    display: block;
+    width: 50vw;
+    min-width: 100%;
+}
