--- a/src/app/station-summary/station-summary.component.html
+++ b/src/app/station-summary/station-summary.component.html
@@ -14,4 +14,4 @@
 
     <tr mat-row *matRowDef="let row; columns: ['name', 'value', 'unit'];" (click)="handleTableClick($event, row)"></tr>
 </table>
-<sw-measurement-line [station]="station" [measurement]="displayedMeasurement"></sw-measurement-line>
+<sw-measurement-line [station]="station" [measurement]="displayedMeasurement" *ngIf="displayedMeasurement !== null"></sw-measurement-line>
