--- a/src/app/weather-overview/weather-overview.component.scss
+++ b/src/app/weather-overview/weather-overview.component.scss
@@ -16,10 +16,6 @@ img {
     transform: translate(-50%, -50%);
 }
 
-.forecast:hover {
-    z-index: 50;
-}
-
 #bolzano {
     top: 75%;
     left: 50%;
@@ -56,12 +52,6 @@ img {
     overflow: hidden;
 }
 
-table {
-    position: absolute;
-    bottom: 0;
-    text-align: center;
-}
-
 div {
     position: relative;
 }
@@ -72,6 +62,7 @@ div {
     background: white;
     bottom: 0;
     box-shadow: lightgray 1px -1px 5px;
+    width: 100%;
 }
 
 #forecasts div div {
