Improved location weather display

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <div fxLayout="column" style="width: 100%; height: 100%; overflow: hidden;">
     <mat-toolbar color="primary" fxFlex="0 0 auto">
-        <button mat-button routerLink="/">
+        <button mat-button routerLink="/" fxHide.lt-sm>
             <h1>Weather</h1>
         </button>
 
