--- a/src/app/location-weather/location-weather.component.html
+++ b/src/app/location-weather/location-weather.component.html
@@ -1,15 +1,17 @@
 <div id="root" fxLayout="column">
     <div fxFlex>
+        <div id="background" [style.backgroundImage]="'url(/assets/district' + weather?.districtId + '.jpg)'" *ngIf="weather?.districtId"></div>
         <div id="today">
-            <h1>{{ weather?.name }}</h1>
-            <img [src]="weather?.today.imageURL">
+            <h1 ngClass.lt-sm="sm" ngClass.gt-md="lg">{{ location?.name }}</h1>
+            <span id="temp" *ngIf="weather?.currentTemperature != null">{{ weather?.currentTemperature }} °C</span>
+            <img [src]="weather?.today.imageURL" *ngIf="weather?.today.imageURL">
             <div id="minmax">
                 <div>Min: {{ weather?.today.minTemp }} °C</div>
                 <div>Max: {{ weather?.today.maxTemp }} °C</div>
             </div>
         </div>
     </div>
-    <div fxFlex="0 0 0">
+    <div fxFlex="0 0 auto">
         <div id="forecasts" fxLayout="row wrap">
             <div fxFlex *ngFor="let day of weather?.forecast">
                 <div>{{ day.date.toLocaleDateString() }}</div>
