--- a/src/app/location-weather/location-weather.component.scss
+++ b/src/app/location-weather/location-weather.component.scss
@@ -11,7 +11,7 @@ h1 {
     width: 100%;
     box-sizing: border-box;
     position: relative;
-    color: white;
+    color: #eeeeee;
 }
 
 #background {
