--- a/src/app/weather-overview/weather-overview.component.scss
+++ b/src/app/weather-overview/weather-overview.component.scss
@@ -1,8 +1,11 @@
 div.imgwrap {
     position: relative;
     display: block;
-    margin: 2em auto;
-    width: fit-content;
+    margin: 2vh auto;
+    width: max-content;
+    height: max-content;
+    max-width: 100%;
+    max-height: 100%;
 }
 
 img {
