--- a/src/app/location-weather/location-weather.component.scss
+++ b/src/app/location-weather/location-weather.component.scss
@@ -12,6 +12,7 @@ h1 {
     box-sizing: border-box;
     position: relative;
     color: #eeeeee;
+    text-shadow: black 1px 1px 5px;
 }
 
 #background {
