--- a/src/app/weather-overview/weather-overview.component.html
+++ b/src/app/weather-overview/weather-overview.component.html
@@ -1,5 +1,6 @@
 <div id="root" fxLayout="column">
     <div fxFlex>
+        <div id="background"></div>
         <div class="imgwrap">
             <img src="/assets/suedtirol.svg">
             <div id="bolzano" class="forecast">
