--- a/src/app/weather-overview/weather-overview.component.scss
+++ b/src/app/weather-overview/weather-overview.component.scss
@@ -11,10 +11,12 @@ div.imgwrap {
 img {
     max-width: 100%;
     max-height: 100%;
-    filter: blur(5px);
+    filter: blur(1px);
 }
 
 .forecast {
+    color: #eeeeee;
+    text-shadow: black 1px 1px 5px;
     position: absolute;
     transform: translate(-50%, -50%);
 }
@@ -70,4 +72,16 @@ div {
     display: block;
     margin: auto;
     width: min-content;
+}
+
+#background {
+    filter: blur(10px) brightness(0.7) saturate(0.7);
+    position: absolute;
+    top: -10%;
+    left: -10%;
+    width: 120%;
+    height: 120%;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-image: url(/assets/district7.jpg);
 }
