--- a/src/app/station-summary/station-summary.component.scss
+++ b/src/app/station-summary/station-summary.component.scss
@@ -1,9 +1,11 @@
 .station-name {
     padding-bottom: 8px;
+    user-select: none;
 }
 
 table {
     width: 100%;
+    user-select: none;
 }
 
 td.mat-cell:first-of-type, td.mat-footer-cell:first-of-type, th.mat-header-cell:first-of-type {
